--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edde" />
+    <link rel="stylesheet" href="styless.css" />
     <title>PaintJS</title>
 </head>
 <body>
-    
+    <script src="app.js"></script>    
 </body>
 </html>
