--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edde" />
-    <link rel="stylesheet" href="styless.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>PaintJS</title>
 </head>
 <body>
