--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <title>PaintJS</title>
 </head>
 <body>
-    <canvas id="jscanvas" class="canvas"></canvas>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls__btns">
+        <button id="jsmode">Fill</button>
+        <button id="jsSave">Save</button></div>
     <div class="controls">
         <div class="controls__colors" id="jsColors">
-            <div class="controls__colors" style="background-color:black"></div>
-            <div class="controls__colors" style="background-color:white"></div>
-            <div class="controls__colors" style="background-color:#ff3b30"></div>
-            <div class="controls__colors" style="background-color:#ff9500"></div>
-            <div class="controls__colors" style="background-color:#ffcc00"></div>
-            <div class="controls__colors" style="background-color:#4cd964"></div>
-            <div class="controls__colors" style="background-color:#5ac8fa"></div>
-            <div class="controls__colors" style="background-color:#007aff"></div>
-            <div class="controls__colors" style="background-color:#5856d6"></div>
+            <div class="controls__color" style="background-color:black"></div>
+            <div class="controls__color" style="background-color:white"></div>
+            <div class="controls__color" style="background-color:#ff3b30"></div>
+            <div class="controls__color" style="background-color:#ff9500"></div>
+            <div class="controls__color" style="background-color:#ffcc00"></div>
+            <div class="controls__color" style="background-color:#4cd964"></div>
+            <div class="controls__color" style="background-color:#5ac8fa"></div>
+            <div class="controls__color" style="background-color:#007aff"></div>
+            <div class="controls__color" style="background-color:#5856d6"></div>
         </div>
     </div>
     <script src="app.js"></script>    
