--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls__range">
+       <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1" />    
+    </div>
     <div class="controls__btns">
         <button id="jsmode">Fill</button>
         <button id="jsSave">Save</button></div>
